--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,13 @@
   height:60px;
   margin: 8px 0 0 8px;
 }
+
+.max-col-width {
+  margin-left:auto;
+  margin-right:auto;
+  max-width: 450px;
+}
+
+.tall-bottom {
+  margin-bottom:80px;
+}
